ISP20240215 - 以下功能修改Sen to MR信件

--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashingFastness.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashingFastness.cshtml
@@ -449,7 +449,7 @@
             });
 
             $('#SendMail').unbind('click').on('click', function () {
-                var para = '';
+                var para = '?Subject=@Model.MailSubject';
                 window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
             });
         }
@@ -541,24 +541,32 @@
     function GetSendMailer(data) {
         var to = data.To;
         var cc = data.CC;
+        var subject = data.Subject;
+        var body = data.Body;
+        var rawFiles = data.RawFiles;
 
         if (to != "") {
-            var data = {
-                AIR_LaboratoryID: $("#AIR_LaboratoryID").val(),
-                POID: $("#POID").val(),
-                Seq1: $("#Seq1").val(),
-                Seq2: $("#Seq2").val(),
-                ToAddress: to,
-                CcAddress: cc,
-                ReportNo: '@Model.ReportNo',
-            };
+            let formData = new FormData();
+            formData.append('AIR_LaboratoryID', $("#AIR_LaboratoryID").val());
+            formData.append('POID', $("#POID").val());
+            formData.append('Seq1', $("#Seq1").val());
+            formData.append('Seq2', $("#Seq2").val());
+            formData.append('To', to);
+            formData.append('CC', cc);
+            formData.append('Subject', subject);
+            formData.append('Body', body);
+
+            $.each(rawFiles, function () {
+                formData.append('Files', this);
+            })
 
             $.ajax({
                 url: "@Url.Action("SendWashingFastnessMail")",
                 type: 'POST',
-                dataType: "json",
-                data: { Req: data},
+                contentType: false,
+                data: formData,
                 async: false,
+                processData: false,
                 success: function (data) {
                     if (data.result) {
                         msg.WithSuccess("Success");
