--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
@@ -727,7 +727,7 @@
         });
 
         $('#SendMail').unbind('click').on('click', function () {
-            var para = '';
+            var para = '?Subject=@Model.Crocking_Main.MailSubject';
             window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
         });
 
@@ -861,34 +861,49 @@
         var to = data.To;
         var cc = data.CC;
         var poid = '@Model.Crocking_Main.POID';
+        var subject = data.Subject;
+        var body = data.Body;
+        var rawFiles = data.RawFiles;
 
         if (to != "") {
+            let formData = new FormData();
+            formData.append('ID', $("#ID").val());
+            formData.append('OrderID', poid);
+            formData.append('To', to);
+            formData.append('CC', cc);
+            formData.append('Subject', subject);
+            formData.append('Body', body);
 
-        $.ajax({
-            url: "@Url.Action("CrockingSendMail", "FabricCrkShrkTest", new { Area = "BulkFGT" })",
-            type: 'POST',
-            contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ ID: $('#ID').val(), TO: to, CC: cc, OrderID: poid }),
-            async: false,
-            success: function (data) {
-                if (data.result) {
-                    msg.WithSuccesCheck("Success", function () {
+            $.each(rawFiles, function () {
+                formData.append('Files', this);
+            })
+
+            $.ajax({
+                url: "@Url.Action("CrockingSendMail", "FabricCrkShrkTest", new { Area = "BulkFGT" })",
+                type: 'POST',
+                contentType: false,
+                data: formData,
+                async: false,
+                processData: false,
+                success: function (data) {
+                    if (data.result) {
+                        msg.WithSuccesCheck("Success", function () {
+                            location.reload();
+                        });
+                    }
+                    else {
+                        msg.WithWarningCheck(data.resultMsg, function () {
+                            location.reload();
+                        });
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    // console.log(xhr.responseText);
+                    msg.WithWarningCheck(xhr.responseText, function () {
                         location.reload();
                     });
                 }
-                else {
-                    msg.WithWarningCheck(data.resultMsg, function () {
-                        location.reload();
-                    });
-                }
-            },
-            error: function (xhr, ajaxOptions, thrownError) {
-                // console.log(xhr.responseText);
-                msg.WithWarningCheck(xhr.responseText, function () {
-                    location.reload();
-                });
-            }
-        });
+            });
         }
     }
 
