--- a/Quality/Quality/Areas/BulkFGT/Views/HydrostaticPressureWaterproofTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/HydrostaticPressureWaterproofTest/Index.cshtml
@@ -1110,7 +1110,7 @@
                 return false;
             }
 
-            var para = '';
+            var para = '?Subject=@Model.Main.MailSubject';
             window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
 
             $.ajax({
@@ -1307,15 +1307,30 @@
     function GetSendMailer(data) {
         var to = data.To;
         var cc = data.CC;
+        var subject = data.Subject;
+        var body = data.Body;
+        var rawFiles = data.RawFiles;
 
         if (to != "") {
+
+            let formData = new FormData();
+            formData.append('ReportNo', $("#Main_ReportNo").val());
+            formData.append('To', to);
+            formData.append('CC', cc);
+            formData.append('Subject', subject);
+            formData.append('Body', body);
+
+            $.each(rawFiles, function () {
+                formData.append('Files', this);
+            })
 
             $.ajax({
                 url: "@Url.Action("SendMail")",
                 type: 'POST',
-                contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ ReportNo: $('#Main_ReportNo').val(), TO: to, CC: cc }),
+                contentType: false,
+                data: formData,
                 async: false,
+                processData: false,
                 success: function (data) {
                 if (data.result) {
                     msg.WithSuccesCheck("Success", function () {
