--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -519,33 +519,8 @@
 
         $('#SendMail').unbind('click').on('click', function () {
 
-            var para = '';
+            var para = '?Subject=@Model.Detail.MailSubject';
             window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=400');
-
-
-            @*$.ajax({
-                url: "@Url.Action("Report", "PullingTest", new { Area = "BulkFGT" })",
-                type: 'POST',
-                contentType: "application/json; charset=utf-8",
-                data: JSON.stringify({ ReportNo: $('#Detail_ReportNo').val() }),
-                async: false,
-                success: function (data) {
-                    if (data.Result) {
-                        var para = "?To=";
-                        para += "&CC=" + '@ViewBag.UserMail';
-                        para += "&Subject=" + "Pulling Test – ReportNo:" + '@Model.Detail.ReportNo';
-                        para += "&Body=" + "Attachment is Pulling Test– ReportNo:" + '@Model.Detail.ReportNo' + " detail data";
-                        para += "&file=" + data.FileName;
-                        window.open('@Url.Action("SendMailer", "SendMailAttachfiles", new { Area=""})' + para, 'SendMail', config = 'toolbar=no,status=no,location=no,width=800,height=600');
-                    }
-                    else {
-                        msg.WithError(data.ErrorMessage);
-                    }
-                },
-                error: function (xhr, ajaxOptions, thrownError) {
-                    console.log(xhr.responseText);
-                }
-            });*@
         });
 
 
@@ -1137,34 +1112,49 @@
     function GetSendMailer(data) {
         var to = data.To;
         var cc = data.CC;
+        var subject = data.Subject;
+        var body = data.Body;
+        var rawFiles = data.RawFiles;
 
         if (to != "") {
 
-        $.ajax({
-            url: "@Url.Action("SendMail")",
-            type: 'POST',
-            contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ ReportNo:  $('#ReportNoText').val(), TO: to, CC: cc }),
-            async: false,
-            success: function (data) {
-                if (data.result) {
-                    msg.WithSuccesCheck("Success", function () {
-                        $("#btnQuery").click();
-                    });
-                }
-                else {
-                    msg.WithWarningCheck(data.resultMsg, function () {
+            let formData = new FormData();
+            formData.append('ReportNo', $("#ReportNoText").val());
+            formData.append('To', to);
+            formData.append('CC', cc);
+            formData.append('Subject', subject);
+            formData.append('Body', body);
+
+            $.each(rawFiles, function () {
+                formData.append('Files', this);
+            })
+
+            $.ajax({
+                url: "@Url.Action("SendMail")",
+                type: 'POST',
+                contentType: false,
+                data: formData,
+                async: false,
+                processData: false,
+                success: function (data) {
+                    if (data.result) {
+                        msg.WithSuccesCheck("Success", function () {
+                            $("#btnQuery").click();
+                        });
+                    }
+                    else {
+                        msg.WithWarningCheck(data.resultMsg, function () {
+                            location.reload();
+                        });
+                    }
+                },
+                error: function (xhr, ajaxOptions, thrownError) {
+                    // console.log(xhr.responseText);
+                    msg.WithWarningCheck(xhr.responseText, function () {
                         location.reload();
                     });
                 }
-            },
-            error: function (xhr, ajaxOptions, thrownError) {
-                // console.log(xhr.responseText);
-                msg.WithWarningCheck(xhr.responseText, function () {
-                    location.reload();
-                });
-            }
-        });
+            });
         }
     }
 
