--- a/Quality/Quality/Views/Shared/_Layout.cshtml
+++ b/Quality/Quality/Views/Shared/_Layout.cshtml
@@ -232,7 +232,7 @@
                                 @foreach (Quality_Menu r in subFunction)
                                 {
                                     <li>
-                                        <h6><a href="@r.Url"><span>@r.FunctionName</span></a></h6>
+                                        <h6><a href="@r.Url"><span>．@r.FunctionName</span></a></h6>
                                     </li>
                                 }
                             </ul>
