--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/Index.cshtml
@@ -340,8 +340,8 @@
                     </div>
                 </div>
 
-
-                <div class="bodyDiv" style="overflow:auto;">
+                <br />
+                <div class="bodyDiv" style="overflow:auto;height:20vw;">
 
                     <div class="detailDataDiv">
                         <br />
