--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/IronTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/IronTest.cshtml
@@ -196,6 +196,12 @@
                                             </h4>
                                         </td>
                                         <td>
+                                            <h4 id="PDF" style="margin-right: 1em;">
+                                                <img src="~/Image/Icon/PDF.png" width="30" />
+                                                PDF
+                                            </h4>
+                                        </td>
+                                        <td>
                                             <h4 id="SendMail" style="margin-right: 1em;">
                                                 <img src="~/Image/Icon/SendMail.png" width="30" />
                                                 Send to MR
@@ -482,8 +488,8 @@
         // 按編輯為控制disabled，如果是編輯模式下不給使用者操作，請在元件身上加上readonly
         if (EditMode) {
 
-            $("#Edit, #Encode, #Amend, #Excel ,#SendMail").removeClass("IsEditMode");
-            $('#Encode, #Amend, #Excel ,#SendMail').unbind('click');
+            $("#Edit, #Encode, #Amend, #Excel ,#PDF ,#SendMail").removeClass("IsEditMode");
+            $('#Encode, #Amend, #Excel ,#PDF ,#SendMail').unbind('click');
 
             $('#Save, #New').addClass("IsEditMode");
             $(".DataTable:not(.DetailTable) textarea").removeAttr("disabled", "disabled");
@@ -496,7 +502,7 @@
             $(".DataTable:not(.DetailTable) textarea").attr("disabled", "disabled");
             $(".DetailTable input,.DetailTable select, #Iron_Main_IronRemark").attr("disabled", "disabled");
             $(".detailDelete").hide();
-            $('#Excel ,#SendMail').addClass("IsEditMode");
+            $('#Excel ,#PDF ,#SendMail').addClass("IsEditMode");
 
             if (@Model.Iron_Main.IronEncode == false) {
                 $("#Edit, #Encode").addClass("IsEditMode");
@@ -606,7 +612,11 @@
         });
 
         $('#Excel').unbind('click').on('click', function () {
-            ToReport();
+            ToReport(0);
+        });
+
+        $('#PDF').unbind('click').on('click', function () {
+            ToReport(1);
         });
 
         $('#SendMail').unbind('click').on('click', function () {
@@ -680,12 +690,12 @@
         }
     }
 
-    function ToReport() {
+    function ToReport(IsToPDF) {
         $.ajax({
             url: "@Url.Action("Report_Iron", "FabricCrkShrkTest", new { Area = "BulkFGT" })",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ ID: $('#ID').val() }),
+            data: JSON.stringify({ ID: $('#ID').val(), IsToPDF: IsToPDF }),
             async: false,
             success: function (data) {
                 if (data.Result) {
