--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/WashTest.cshtml
@@ -197,6 +197,12 @@
                                             </h4>
                                         </td>
                                         <td>
+                                            <h4 id="PDF" style="margin-right: 1em;">
+                                                <img src="~/Image/Icon/PDF.png" width="30" />
+                                                PDF
+                                            </h4>
+                                        </td>
+                                        <td>
                                             <h4 id="SendMail" style="margin-right: 1em;">
                                                 <img src="~/Image/Icon/SendMail.png" width="30" />
                                                 Send to MR
@@ -523,8 +529,8 @@
         // 按編輯為控制disabled，如果是編輯模式下不給使用者操作，請在元件身上加上readonly
         if (EditMode) {
 
-            $("#Edit, #Encode, #Amend, #Excel ,#SendMail").removeClass("IsEditMode");
-            $('#Encode, #Amend, #Excel ,#SendMail').unbind('click');
+            $("#Edit, #Encode, #Amend, #Excel ,#PDF ,#SendMail").removeClass("IsEditMode");
+            $('#Encode, #Amend, #Excel ,#PDF ,#SendMail').unbind('click');
 
             $('#Save, #New').addClass("IsEditMode");
             $(".MainEdit").removeAttr("disabled", "disabled");
@@ -537,7 +543,7 @@
             $(".MainEdit").attr("disabled", "disabled");
             $(".DetailTable input,.DetailTable select, #Wash_Main_WashRemark").attr("disabled", "disabled");
             $(".detailDelete").hide();
-            $('#Excel ,#SendMail').addClass("IsEditMode");
+            $('#Excel ,#PDF ,#SendMail').addClass("IsEditMode");
 
             if (@Model.Wash_Main.WashEncode == false) {
                 $("#Edit, #Encode").addClass("IsEditMode");
@@ -646,8 +652,13 @@
         });
 
         $('#Excel').unbind('click').on('click', function () {
-            ToReport();
+            ToReport(0);
         });
+
+        $('#PDF').unbind('click').on('click', function () {
+            ToReport(1);
+        });
+
 
         $('#SendMail').unbind('click').on('click', function () {
             var para = '?Subject=@Model.Wash_Main.MailSubject';
@@ -727,7 +738,7 @@
         }
     }
 
-    function ToReport() {
+    function ToReport(IsToPDF) {
 
         msg.WithInfoTimer("Report Generating...");
 
@@ -735,7 +746,7 @@
             url: "@Url.Action("Report_Wash", "FabricCrkShrkTest", new { Area = "BulkFGT" })",
             type: 'POST',
             contentType: "application/json; charset=utf-8",
-            data: JSON.stringify({ ID: $('#ID').val() }),
+            data: JSON.stringify({ ID: $('#ID').val(), IsToPDF: IsToPDF }),
             async: true,
             success: function (data) {
                 if (data.Result) {
