ISP20240279 - Brand = REI 且數量 <12時， AQL鎖定只能100$檢驗

--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Setting.cshtml
@@ -1026,6 +1026,10 @@
                     $("#AQLPlan").val('100% Inspection');
                     $("#AqlInputType").change();
                     $("#AQLPlan").change();
+                    $('#AQLPlan').prop('disabled', true);
+                }
+                else {
+                    $("#AQLPlan").removeAttr("disabled");
                 }
 
                 if ($("#AQLPlan").val() == "100% Inspection") {
