--- a/Quality/Quality/Views/PublicWindow/FabricCrockingPictureList.cshtml
+++ b/Quality/Quality/Views/PublicWindow/FabricCrockingPictureList.cshtml
@@ -44,12 +44,11 @@
     #cont {
         width: 100%;
         height: 60vw;
-        display: flex;
-        flex-direction: row;
+        overflow:scroll
     }
 
     .outerDiv {
-        width: 32%;
+        width: 45%;
         height: 100%;
         float: left;
         margin-right: 2%;
