--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -595,7 +595,24 @@
                                 <tbody>
                                     @for (int i = 0; i <= Model.Spiralities.Count - 1; i++)
                                     {
-                                        string Location = Model.Spiralities[i].Location.Equals("T") ? "Top" : "Bottom";
+                                        string Location = string.Empty;
+                                        switch (Model.Spiralities[i].Location)
+                                        {
+                                            case "T":
+                                                Location = "Top";
+                                                break;
+                                            case "B":
+                                                Location = "Bottom";
+                                                break;
+                                            case "I":
+                                                Location = "Inner";
+                                                break;
+                                            case "O":
+                                                Location = "Outer";
+                                                break;
+                                            default:
+                                                break;
+                                        }
                                         <tr>
                                             <td>
                                                 <h4>Spirality (@Location)%</h4>
